Room available API
