# routes/api.php
@@ -48,6 +48,8 @@ Route::get('/hotels/rooms', [RoomController::class, 'index']);
 Route::get('/hotels/roomstatus/{rooms_id}', [RoomStatusController::class, 'showRoomStatus']);
 
 Route::put('/hotels/roomstatus/{rooms_id}', [RoomStatusController::class, 'update']);
+
+Route::delete('/hotels/roomstatus/{rooms_id}', [RoomStatusController::class, 'destroy']);
 // Room API
 
 // Categories API
